# Ether

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GenerateProjects.bat  GenerateProjects_Win32.bat  README.md  window.cpp  window.h
docs/: touch.txt
sampleapp/: CMakeLists.txt
sampleapp/src/: main.cpp  sampleapp.cpp  sampleapp.h  winmain.cpp
src/common/: CMakeLists.txt  common.h  commondefinitions.h  hash.h  logger.cpp  logger.h  stringid.cpp  stringid.h  time.cpp  time.h
src/common/debugging/: markers.cpp  markers.h
src/common/logging/: logentry.cpp  logentry.h  logger.cpp  logger.h  loggingmanager.cpp  loggingmanager.h
src/common/memory/: freelistallocator.cpp  freelistallocator.h  linearallocator.cpp  linearallocator.h  memoryallocator.h  memoryutils.h
src/common/stream/: bytestream.cpp  bytestream.h  filestream.cpp  filestream.h  stream.cpp  stream.h
src/common/time/: time.cpp  time.h
src/common/utils/: commondefinitions.h  exceptions.h  noncopyable.h  nonmovable.h  pathutils.cpp  pathutils.h  serializable.cpp  serializable.h  singleton.h  stringid.cpp  stringid.h  stringutils.h  time.cpp  time.h  types.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h  enginecore.cpp  enginecore.h  engineschedule.cpp  engineschedule.h  enginesubsystem.h  enginesubsystemid.cpp  enginesubsystemid.h  enginesubsystemregistry.cpp  enginesubsystemregistry.h  enginesubsystemscheduler.cpp  enginesubsystemscheduler.h  pch.h
src/engine/api/: api.cpp  api.h  iapplicationbase.cpp  iapplicationbase.h
src/engine/config/: commandlineoptions.cpp  commandlineoptions.h  engineconfig.cpp  engineconfig.h
src/engine/event/: eventargs.h  events.h  rendereventargs.h  updateeventargs.h
src/engine/events/: eventargs.h  events.h  keyeventargs.h  mouseeventargs.h  rendereventargs.h
src/engine/input/: input.cpp  input.h
src/engine/platform/: platformkeycodes.h  platformlaunchargs.h  platformnotificationtray.cpp  platformnotificationtray.h  platformwindow.cpp  platformwindow.h
src/engine/platform/ps5/: ps5keycodes.h  ps5launchargs.cpp  ps5launchargs.h  ps5window.cpp  ps5window.h
src/engine/platform/win32/: ethwin.h  win32keycodes.h  win32launchargs.cpp  win32launchargs.h  win32notificationtray.cpp  win32notificationtray.h  win32window.cpp  win32window.h
src/engine/subsystem/: enginesubsystem.h  enginesubsystemcontroller.cpp  enginesubsystemcontroller.h  subsystem.h
src/engine/world/: entity.cpp  entity.h  scenegraph.cpp  scenegraph.h  world.cpp  world.h
src/engine/world/ecs/: ecscomponentmanager.cpp  ecscomponentmanager.h  ecsentitymanager.cpp  ecsentitymanager.h  ecsmanager.cpp  ecsmanager.h  ecssystemmanager.cpp  ecssystemmanager.h  ecstypes.h  entitymanager.cpp  entitymanager.h
src/graphics/: CMakeLists.txt  commandallocatorpool.cpp  commandallocatorpool.h  commandmanager.cpp  commandmanager.h  core.cpp  core.h  graphiccommon.cpp  graphiccommon.h  graphiccore.cpp  graphiccore.h  graphicdisplay.cpp  graphicdisplay.h  graphicrenderer.cpp  graphicrenderer.h  pch.h
src/graphics/command/: commandallocatorpool.cpp  commandallocatorpool.h  commandmanager.cpp  commandmanager.h
src/graphics/common/: graphiccommon.cpp  graphiccommon.h  renderdata.h  vertexformats.cpp  vertexformats.h  visual.cpp  visual.h  visualbatch.cpp  visualbatch.h
src/graphics/config/: graphicconfig.cpp  graphicconfig.h
src/graphics/context/: commandcontext.cpp  commandcontext.h  graphiccontext.cpp  graphiccontext.h  resourcecontext.cpp  resourcecontext.h
src/graphics/imgui/: imstb_truetype.h
src/graphics/memory/: bindlessdescriptormanager.cpp  bindlessdescriptormanager.h  bindlessresourcemanager.cpp  bindlessresourcemanager.h  descriptorallocation.cpp  descriptorallocation.h  descriptorallocator.cpp  descriptorallocator.h  uploadbufferallocation.cpp  uploadbufferallocation.h  uploadbufferallocator.cpp  uploadbufferallocator.h  uploadbufferallocatorpage.cpp  uploadbufferallocatorpage.h
src/graphics/rendergraph/: tempframedump.cpp  tempframedump.h
src/graphics/resources/: material.cpp  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h
src/graphics/rhi/: rhiaccelerationstructure.h  rhicommandallocator.h  rhicommandlist.cpp  rhicommandlist.h  rhicommandqueue.cpp  rhicommandqueue.h  rhicomputepipelinestate.cpp  rhicomputepipelinestate.h  rhidescriptorheap.h  rhidevice.h  rhienums.h  rhifence.h  rhigraphicpipelinestate.cpp  rhigraphicpipelinestate.h  rhiimguiwrapper.cpp  rhiimguiwrapper.h  rhimodule.cpp  rhimodule.h  rhipipelinestate.cpp  rhipipelinestate.h  rhiraytracingpipelinestate.cpp  rhiraytracingpipelinestate.h  rhiraytracingshaderbindingtable.cpp  rhiraytracingshaderbindingtable.h  rhiraytracingshadertable.cpp  rhiraytracingshadertable.h  rhiresource.cpp  rhiresource.h  rhiresourceviews.h  rhirootsignature.cpp  rhirootsignature.h  rhishader.cpp  rhishader.h  rhiswapchain.h  rhitypes.h
src/graphics/schedule/: TempRaytracingFrameDump.cpp  TempRaytracingFrameDump.h  framecompositeproducer.cpp  framecompositeproducer.h  framescheduler.cpp  framescheduler.h  frameschedulerutils.h  gbufferproducer.cpp  gbufferproducer.h  globalconstantsproducer.cpp  globalconstantsproducer.h  raytracedgbufferpass.cpp  raytracedgbufferpass.h  schedulecontext.cpp  schedulecontext.h  tempframedump.cpp  tempframedump.h
src/graphics/shaderdaemon/: shaderdaemon.cpp  shaderdaemon.h
src/graphics/shaders/: default.hlsl  finalcomposite.hlsl  framecomposite.hlsl  gbuffer.hlsl  proceduralsky.hlsl
src/toolmode/: CMakeLists.txt  pch.h  toolmain.cpp  toolmain.h
src/toolmode/asset/: assetcompiler.cpp  assetcompiler.h  assetdatabase.cpp  assetdatabase.h  assetimporter.cpp  assetimporter.h  rawmesh.cpp  rawmesh.h  textureimporter.cpp  textureimporter.h
src/toolmode/ipc/: ipcmanager.cpp  ipcmanager.h  networksocket.cpp  networksocket.h  tcpsocket.cpp  tcpsocket.h
src/toolmode/property/: field.h  floatfield.h  property.h  vector2field.h  vector2property.h  vector3field.h  vector3property.h  vector4field.h  vector4property.h
src/toolmode/utility/: pathutils.cpp  pathutils.h
(+809 files in other folders)
